# lerobot_ros2

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh  setup.py  start_bridge.sh  start_moveit.sh  test_motor_positions.py
config/moveit/: controllers.yaml  joint_limits.yaml  kinematics.yaml  move_group.yaml  ompl_planning.yaml  ros2_controllers.yaml  so100_follower.srdf  so101.srdf
config/rviz/: moveit.rviz
configs/camera/: realsense_camera.yaml  top_camera.yaml  wrist_camera.yaml
configs/robot/: example_with_groups.yaml  simple_robot.yaml  so100_config.yaml  so100_leader.yaml  so101_config.yaml
configs/training/: act_config.yaml  diffusion_config.yaml
docs/: ISAAC_SIM_INTEGRATION.md  README.md  SCRIPTS_REFERENCE.md  SO101_SETUP_GUIDE.md
launch/: moveit_demo.launch.py
scripts/: analyze_joint_range.py  calibrate_motors.py  check_joint_diff.py  control_motors_gui.py  diagnose_motor_calibration.py  download_so_arm_urdf.py  execute_moveit_trajectory.py  fix_goal_position.py  generate_urdf.py  isaac_teleop_relay.py  register_motors.py  run_moveit_demo.py  run_ros2_bridge.py  set_motor_speed_limit.py
src/lerobot_ros2/: __init__.py
src/lerobot_ros2/configs/: __init__.py  camera_configs.py  config_loader.py  robot_configs.py  training_configs.py
src/lerobot_ros2/data_collection/: __init__.py  robot_bridge.py  rosbag_recorder.py  teleop_interface.py
src/lerobot_ros2/deployment/: __init__.py
src/lerobot_ros2/hardware/: __init__.py  calibration.py  camera_controller.py  dynamixel_controller.py  feetech_controller.py  find_port.py
src/lerobot_ros2/training/: __init__.py
src/lerobot_ros2/utils/: __init__.py  logging.py  ros2_utils.py  safety.py  transforms.py
